--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="/script.js"></script>
     <title>Shelter</title>
 </head>
 <body>
@@ -37,7 +38,7 @@
                         <p class="Not-only-title">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                         <a class="btn" href="#Our-friends">Make a friend</a>
                     </div>
-                    <img alt="dogphoto" src="/docs/assets/images/start-screen-puppy.png"  class="image">
+                    <img alt="dogphoto" src="./docs/assets/images/start-screen-puppy.png"  class="image">
                 </div>
             </div>
         </section>
@@ -45,7 +46,7 @@
     <section class="About">
         <div class="container">
             <div class="About-wrapper">
-                <img alt="petsimage" src="/docs/assets/images/about-pets.png" class="image">
+                <img alt="petsimage" src="./docs/assets/images/about-pets.png" class="image">
                 <div class="About-offer">
                     <h2 class="About-intro">About the shelter <br> “Cozy House”</h2>
                     <p class="About-title">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
@@ -63,51 +64,51 @@
                     <div class="carousel" id="carousel">
                         <div class="item" id="item-left">
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-katrine.png" alt="cat-katrine">
+                                <img class="card-image" src="./docs/assets/images/pets-katrine.png" alt="cat-katrine">
                                 <p class="pets-name">Katrine</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-sophia.png" alt="dog-jennifer">
+                                <img class="card-image" src="./docs/assets/images/pets-sophia.png" alt="dog-jennifer">
                                 <p class="pets-name">Sophia</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-freddie.png" alt="dog-woody">
+                                <img class="card-image" src="./docs/assets/images/pets-freddie.png" alt="dog-woody">
                                 <p class="pets-name">Freddie</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                         </div>
                         <div class="item" id="item-active">
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-katrine.png" alt="cat-katrine">
+                                <img class="card-image" src="./docs/assets/images/pets-katrine.png" alt="cat-katrine">
                                 <p class="pets-name">Katrine</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-jennifer.png" alt="dog-jennifer">
+                                <img class="card-image" src="./docs/assets/images/pets-jennifer.png" alt="dog-jennifer">
                                 <p class="pets-name">Jennifer</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-woody.png" alt="dog-woody">
+                                <img class="card-image" src="./docs/assets/images/pets-woody.png" alt="dog-woody">
                                 <p class="pets-name">Woody</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                         </div>
                         <div class="item" id="item-right">
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-timmy.png" alt="cat-katrine">
+                                <img class="card-image" src="./docs/assets/images/pets-timmy.png" alt="cat-katrine">
                                 <p class="pets-name">Timmy</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-charly.png" alt="dog-jennifer">
+                                <img class="card-image" src="./docs/assets/images/pets-charly.png" alt="dog-jennifer">
                                 <p class="pets-name">Charly</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
                             <div class="card">
-                                <img class="card-image" src="/docs/assets/images/pets-scarlet.png" alt="dog-woody">
+                                <img class="card-image" src="./docs/assets/images/pets-scarlet.png" alt="dog-woody">
                                 <p class="pets-name">Scarlett</p>
                                 <button class="learn-more" type="submit">Learn more</button>
                             </div>
@@ -125,41 +126,41 @@
             <div class="Help-list">
                 <div class="list">
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-pet-food.svg" alt="pet-food" class="element-icon">
+                        <img src="./docs/assets/icons/icon-pet-food.svg" alt="pet-food" class="element-icon">
                         <p class="element">Pet food</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-transportation.svg" alt="transportation" class="element-icon">
+                        <img src="./docs/assets/icons/icon-transportation.svg" alt="transportation" class="element-icon">
                         <p class="element">Transportation</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-toys.svg" alt="toys" class="element-icon">
+                        <img src="./docs/assets/icons/icon-toys.svg" alt="toys" class="element-icon">
                         <p class="element">Toys</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups" class="element-icon">
+                        <img src="./docs/assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups" class="element-icon">
                         <p class="element">Bowls-and-cups</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-shampoos.svg" alt="shampoos" class="element-icon">
+                        <img src="./docs/assets/icons/icon-shampoos.svg" alt="shampoos" class="element-icon">
                         <p class="element">Shampoos</p>
                     </div>
                 </div>
                 <div class="list">
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-vitamins.svg" alt="vitamins" class="element-icon">
+                        <img src="./docs/assets/icons/icon-vitamins.svg" alt="vitamins" class="element-icon">
                         <p class="element">Vitamins</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-medicines.svg" alt="medicines" class="element-icon">
+                        <img src="./docs/assets/icons/icon-medicines.svg" alt="medicines" class="element-icon">
                         <p class="element">Medicines</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-collars-leashes.svg" alt="collars-leashes" class="element-icon">
+                        <img src="./docs/assets/icons/icon-collars-leashes.svg" alt="collars-leashes" class="element-icon">
                         <p class="element">Collars-leashes</p>
                     </div>
                     <div class="list-element">
-                        <img src="/docs/assets/icons/icon-sleeping-area.svg" alt="sleeping-area" class="element-icon">
+                        <img src="./docs/assets/icons/icon-sleeping-area.svg" alt="sleeping-area" class="element-icon">
                         <p class="element">Sleeping-area</p>
                     </div>
                 </div>
@@ -169,12 +170,12 @@
     <section class="In-addition">
         <div class="container">
             <div class="In-addition-wrapper">
-                <img src="/docs/assets/images/donation-dog.png" alt="donation-dog" class="donation-image">
+                <img src="./docs/assets/images/donation-dog.png" alt="donation-dog" class="donation-image">
                 <div class="donation-offer">
                     <h2 class="donation-intro">You can also <br> make a donation</h2>
                     <p class="donation-title">Name of the bank / Type of bank account</p>
                     <div class="card-info">
-                        <img src="/docs/assets/icons/credit-card.svg" alt="credit-card" class="card-image">
+                        <img src="./docs/assets/icons/credit-card.svg" alt="credit-card" class="card-image">
                         <a href="#" class="card-number">8380 2880 8028 8791 7435</a>
                     </div>
                     <p class="donation-description">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>            
@@ -188,29 +189,28 @@
                 <div class="contacts">
                     <h2 class="contacts-title">For questions and suggestions</h2>
                     <div class="contact-wrapper">
-                        <a href="https://www.gmail.com"><img src="/docs/assets/icons/icon-email.svg" alt="email" class="email-icon"></a>
+                        <a href="https://www.gmail.com"><img src="./docs/assets/icons/icon-email.svg" alt="email" class="email-icon"></a>
                         <a href="https://www.gmail.com" class="contact-link">email@shelter.com</a>
                     </div>
                     <div class="contact-wrapper">
-                        <a href="tel: +13 674 567 75 54"><img src="/docs/assets/icons/icon-phone.svg" alt="phone" class="phone"></a>
+                        <a href="tel: +13 674 567 75 54"><img src="./docs/assets/icons/icon-phone.svg" alt="phone" class="phone"></a>
                         <a href="tel: +13 674 567 75 54" class="contact-link">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="contacts">
                     <h2 class="contacts-title">We are waiting for your visit</h2>
                     <div class="contact-wrapper">
-                        <a href="https://www.google.com/maps"><img src="/docs/assets/icons/pin.png" alt="gps" class="gps-icon"></a>
+                        <a href="https://www.google.com/maps"><img src="./docs/assets/icons/pin.png" alt="gps" class="gps-icon"></a>
                         <a href="https://www.google.com/maps" class="contact-link">1 Central Street, Boston (entrance from the store)</a>
                     </div>
                     <div class="contact-wrapper">
-                        <a href="https://www.google.com/maps"><img src="/docs/assets/icons/pin.png" alt="gps" class="gps"></a>
+                        <a href="https://www.google.com/maps"><img src="./docs/assets/icons/pin.png" alt="gps" class="gps"></a>
                         <a href="https://www.google.com/maps" class="contact-link">18 South Park, London</a>
                     </div>
                 </div>
-                <img src="/docs/assets/images/footer-puppy.png" alt="puppy" class="footer-image">
+                <img src="./docs/assets/images/footer-puppy.png" alt="puppy" class="footer-image">
             </div>
         </div>
     </footer>
-    <script src="/script.js"></script>
 </body>
 </html>
